# metis-fn

./: .gitignore  pyproject.toml
metis_fn/: error.py  monad.py
tests/: test_chronos.py  test_fn.py  test_monad.py  test_record.py
