[tool.poetry]
name = "metis-fn"
version = "0.1.1"
description = ""
authors = ["Col Perks <wild.fauve@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymonad = "^2.4.0"
pendulum = "^3.0.0"
isoduration = "^20.11.0"


[tool.poetry.group.dev.dependencies]
pytest-env = "^1.1.3"
pytest = "^8.1.0"
pdbpp = "^0.10.3"
time-machine = "^2.14.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
python_classes = ["*Test", "Test*", "Describe*"]
python_functions = ["test_*", "it_*"]
xfail_strict = true
log_cli = true
log_cli_level = 20
env = []
testpaths = ["tests", "integration"]

[tool.pytest_env]
HOME = "~/tmp"
ENVIRONMENT = "test"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
